--- a/web/themes/digitac/scss/03_component/_modal.scss
+++ b/web/themes/digitac/scss/03_component/_modal.scss
@@ -134,3 +134,14 @@
         display: none !important;
     }
 }
+
+
+.header {
+    &.relative {
+        position: sticky !important;
+    }
+
+    &.layer {
+        z-index: 0;
+    }
+}
