--- a/web/themes/digitac/scss/03_component/_paragraph-claim.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-claim.scss
@@ -71,7 +71,7 @@
         }
 
         .btn {
-            max-width: rem(340px);
+            //max-width: rem(340px);
             width: 100%;
 
             @include media(md) {
