--- a/web/themes/digitac/scss/03_component/_paragraph-header.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-header.scss
@@ -96,6 +96,11 @@
             }
         }
     }
+
+    &.paragraph--title--Moderar_comentarios_pendientes,
+    &.paragraph--title--Administrar_retos {
+        padding-bottom: 0;
+    }
 }
 
 
