--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -173,7 +173,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="loginModalStructure">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="loginModalStructure">{{'Crear un comentario'|t}}</h3>
           <p>{{'Para hacer un comentario necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
