--- a/web/themes/digitac/templates/nodes/node--reto.html.twig
+++ b/web/themes/digitac/templates/nodes/node--reto.html.twig
@@ -167,6 +167,15 @@
 
     <div class="tab-pane tab-pane-experience fade" id="experience" role="tabpanel" aria-labelledby="experience-tab">
 
+      <div class="message" id="message-idea">
+        <a href="#" class="message__close js-message-close"><span class="visually-hidden">Cerrar mensaje</span></a>
+        <div class="message__content">
+          <p class="message__title">{{'Tablero de experiencias'|t}}</p>
+          <p class="message__text">{{'En este tablero puedes proponer experiencias que hayas tenido y que den una solución total o parcial al reto propuesto'|t}}</p>
+        </div>
+      </div>
+
+
       <div class="tab-experiences">
         <div class="actions">
           <ul>
@@ -213,7 +222,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva idea'|t}}</h3>
           <p>{{'Para crear una nueva idea necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -231,7 +240,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva experiencia'|t}}</h3>
           <p>{{'Para crear una nueva experiencia necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
