--- a/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
@@ -96,7 +96,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="exampleModalLabel">{{'Crear nuevo reto'|t}}</h3>
           <p>{{'Para crear un nuevo reto necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
