--- a/web/themes/digitac/templates/system/page--user--password.html.twig
+++ b/web/themes/digitac/templates/system/page--user--password.html.twig
@@ -79,7 +79,7 @@ set footer_classes = 'footer' ~
 						<h1>Recuperar  contraseña</h1>
 						<p>Indícanos el email asociado a tu cuenta  y te enviaremos un enlace para que puedas elegir una nueva contraseña
 						</p>
-						<a href="/user/login" class="btn btn-link">Volver</a>
+						<a href="/user/login" class="btn btn--link btn--link-back">Volver</a>
 					</div>
 
 					{{ page.content }}
