--- a/web/themes/digitac/templates/system/page--user--register.html.twig
+++ b/web/themes/digitac/templates/system/page--user--register.html.twig
@@ -86,7 +86,7 @@ set footer_classes = 'footer' ~
 				<div class="register__col-container">
 					<div class="register__col-description">
 						<h2>{{'Registro'|t}}</h2>
-						<p>{{'Date de alta y participa en la comunidad de Digitac HUB. Todos los campos marcados con * son obligatorios'|t}}</p>
+						<p>{{'Date de alta y participa en la comunidad de Digitac HUB. Todos los campos marcados con <span class="required-color">*</span> son obligatorios'|t}}</p>
 					</div>
 
 					{{ page.content }}
