--- a/web/themes/digitac/scss/02_layout/_header.scss
+++ b/web/themes/digitac/scss/02_layout/_header.scss
@@ -132,18 +132,17 @@
         }
 
         &::after {
-          content: '';
-          width: 0;
-          height: rem(4px);
-          margin: 0 auto;
-          background-color: $white;
-          position: absolute;
-          bottom: 0;
-          right: 0;
-          left: 0;
-          transition: all 0.3s ease;
-
           @include media(xxl) {
+            content: '';
+            width: 0;
+            height: rem(4px);
+            margin: 0 auto;
+            background-color: $white;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            transition: all 0.3s ease;
             bottom: rem(-48px);
           }
         }
@@ -489,6 +488,8 @@
       }
     }
 
+
+
     #{$headerParent}__menu-registro {
       .navbar-nav {
         li {
@@ -538,8 +539,25 @@
 
           }
         }
+
+        &:last-child {
+          .nav-link {
+            color: $white;
+            border-color: $blue-600;
+            background-color: $blue-600;
+
+            &:hover {
+              border-color: $blue-700;
+              background-color: $blue-700;
+              color: $white;
+            }
+          }
+
+        }
       }
     }
+
+
 
     .selectBox {
       .selectBox__value {
@@ -641,10 +659,25 @@ body:not(.path-frontpage) {
             color: $primary;
 
             &::after {
-              background-color: $primary;
+              background-color: $blue-600;
             }
 
           }
+        }
+
+        &:last-child {
+          .nav-link {
+            color: $white;
+            border-color: $blue-600;
+            background-color: $blue-600;
+
+            &:hover {
+              border-color: $blue-700;
+              background-color: $blue-700;
+              color: $white;
+            }
+          }
+
         }
       }
     }
