--- a/web/themes/digitac/scss/03_component/_button.scss
+++ b/web/themes/digitac/scss/03_component/_button.scss
@@ -50,6 +50,13 @@
     &--icon {
       padding-left: rem(40px);
       position: relative;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+
+      @include media(md) {
+
+      }
 
       &::before {
         content: '';
@@ -57,10 +64,19 @@
         height: rem(20px);
         background-repeat: no-repeat;
         background-size: contain;
-        position: absolute;
-        top: 50%;
-        left: rem(12px);
-        transform: translateY(-50%);
+        display: inline-flex;
+        align-self: center;
+        margin-right: rem(10px);
+        margin-left: rem(-30px);
+
+        @include media(md) {
+          margin-right: 0;
+          margin-left: 0;
+          position: absolute;
+          top: 50%;
+          left: rem(12px);
+          transform: translateY(-50%);
+        }
 
       }
 
@@ -100,6 +116,9 @@
     &--icon {
       padding-left: rem(40px);
       position: relative;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
