--- a/web/themes/digitac/scss/03_component/_courses.scss
+++ b/web/themes/digitac/scss/03_component/_courses.scss
@@ -49,12 +49,8 @@
             }
         }
 
-        a {
-            &::after {
-                display: none;
-            }
-
-            .title {
+        .title {
+            a {
                 margin-bottom: rem(8px);
                 font-family: $font-family-base;
                 font-style: normal;
@@ -64,6 +60,14 @@
                 color: $grey-900;
                 text-align: left;
                 text-decoration: none;
+
+                &::after {
+                    display: none;
+                }
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
         }
 
@@ -87,6 +91,10 @@
                 font-weight: 400;
                 font-size: rem(16px);
                 line-height: rem(24px);
+
+                strong {
+                    font-weight: 400;
+                }
             }
         }
 
