--- a/web/themes/digitac/scss/03_component/_node-reto-frontal-form.scss
+++ b/web/themes/digitac/scss/03_component/_node-reto-frontal-form.scss
@@ -88,159 +88,20 @@
 
     .form-type-textfield {
         margin: 0 0 rem(6px);
-        /* position: relative;
-
-        label {
-            margin-bottom: rem(6px);
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 600;
-            font-size: rem(14px);
-            line-height: rem(20px);
-            color: $grey-700;
-
-        }
-
-        input {
-            height: rem(44px);
-            border-radius: rem(8px);
-            background: $white;
-            border: rem(1px) solid $grey-300;
-            box-shadow: 0 rem(1px) rem(2px) rgba(16, 24, 40, 0.05);
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 400;
-            font-size: rem(16px);
-            line-height: rem(24px);
-            color: $grey-500;
-        }
-
-        .counter {
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 500;
-            font-size: rem(14px);
-            line-height: rem(20px);
-            text-align: right;
-            color: $grey-700;
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-
-        + p {
-            margin-bottom: rem(40px);
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 400;
-            font-size: rem(14px);
-            line-height: rem(20px);
-            color: $grey-600;
-        } */
     }
 
-    /* .text-format-wrapper {
-        margin: 0 0 rem(40px);
-        position: relative;
-
-        .form-type-textarea {
-
-            label {
-                margin-bottom: rem(6px);
-                font-family: $font-family-base;
-                font-style: normal;
-                font-weight: 600;
-                font-size: rem(14px);
-                line-height: rem(20px);
-                color: $grey-700;
-            }
-
-            .form-textarea-wrapper {
-                textarea {
-
-                }
-            }
-
-            .ck-editor {
-                .ck-editor__top {
-                    .ck-toolbar {
-                        border-radius: rem(8px) rem(8px) 0 0 !important;
-                        border-color: $grey-300;
-                    }
-                }
-                .ck-content {
-                    height: rem(300px);
-                    min-height: inherit;
-                    border-color: $grey-300;
-                    border-radius: 0 0 rem(8px) rem(8px) !important;
-                }
-            }
-
-            + a {
-                display: none;
-            }
-
-            .description {
-                font-family: $font-family-base;
-                font-style: normal;
-                font-weight: 400;
-                font-size: rem(14px);
-                line-height: rem(20px);
-                color: $grey-600;
-            }
-        }
-
-        .counter {
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 500;
-            font-size: rem(14px);
-            line-height: rem(20px);
-            text-align: right;
-            color: $grey-700;
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-
-        + p {
-            display: none;
-        }
-    } */
 
     .form-type-select {
-        /* margin: 0 0 rem(40px);
-
-        label {
-            margin-bottom: rem(6px);
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 600;
-            font-size: rem(14px);
-            line-height: rem(20px);
-            color: $grey-700;
-        }
-
-        select {
-            height: rem(44px);
-            background: $white;
-            border: rem(1px) solid $grey-300;
-            box-shadow: 0 rem(1px) rem(2px) rgba(16, 24, 40, 0.05);
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 500;
-            font-size: rem(16px);
-            line-height: rem(24px);
-            color: $grey-800;
-        } */
 
         .chosen-container {
-            height: rem(48px);
+            min-height: rem(44px);
+            height: auto;
             padding: 0;
             box-shadow: none;
             background: none;
 
             .chosen-choices {
+                min-height: rem(44px);
                 height: 100%;
                 padding: rem(6px) rem(36px) rem(6px) rem(12px);
                 border-radius: rem(8px);
@@ -252,6 +113,7 @@
                 background-size: rem(20px);
                 background-position: calc(100% - 10px) center;
                 display: flex;
+                flex-wrap: wrap;
 
                 .chosen-search-input {
                     height: 100%;
