--- a/web/themes/digitac/scss/03_component/_paragraph-text-text.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-text-text.scss
@@ -60,6 +60,7 @@
                 }
 
                 .sol_button {
+                    width: 100%;
                     margin: rem(40px) 0 0;
                     padding: rem(10px) rem(16px);
                     text-align: center;
@@ -73,11 +74,16 @@
                     text-decoration: none;
                     transition: all 0.3s ease;
                     display: inline-flex;
+                    justify-content: center;
 
                     border-radius: rem(50px);
                     color: $white;
                     border-color: $blue-600;
                     background-color: $blue-600;
+
+                    @include media(md) {
+                        width: auto;
+                    }
 
                     &:hover {
                         border-color: $blue-700;
