--- a/web/themes/digitac/scss/05_theme/_view-id-view_retos.scss
+++ b/web/themes/digitac/scss/05_theme/_view-id-view_retos.scss
@@ -61,7 +61,7 @@
 
             .form-submit {
                 width: 100%;
-                max-width: rem(343px);
+                //max-width: rem(343px);
                 margin-top: 0;
 
                 @include media(md) {
@@ -77,7 +77,7 @@
             display: flex;
             flex-direction: column;
             gap: rem(16px);
-            height: auto !important;
+            //height: auto !important;
 
             @include media(md) {
                 /* column-count: 2;
@@ -105,9 +105,9 @@
                 break-inside: avoid;
                 padding-right: 0;
                 padding-left: 0;
-                position: relative !important;
+               /*  position: relative !important;
                 top: 0 !important;
-                left: 0 !important;
+                left: 0 !important; */
 
                 @include media(md) {
                     width: calc(50% - 15px);
@@ -118,7 +118,7 @@
                 }
 
                 &-container {
-                    height: 100%;
+                    height: auto;
                     border-radius: rem(16px);
                     border: 1px solid $grey-200;
                 }
@@ -136,15 +136,22 @@
         .pager-show-more {
             width: 100%;
             margin-top: rem(40px);
+            padding: 0;
             display: flex;
             justify-content: center;
 
             .pager__item {
+                width: 100%;
                 padding: 0;
                 display: inline-flex;
 
+                @include media(md) {
+                    width: auto;
+                }
+
                 a {
                     min-width: rem(120px);
+                    width: 100%;
                     margin: 0;
                     padding: rem(10px) rem(16px);
                     text-align: center;
@@ -161,9 +168,11 @@
                     border-color: $blue-600;
                     background-color: $blue-600;
                     transition: all 0.3s ease;
-
                     padding-left: rem(40px);
                     position: relative;
+                    display: inline-flex;
+                    justify-content: center;
+                    align-items: center;
 
                     &::before {
                         content: '';
@@ -172,10 +181,20 @@
                         background-image: url('../images/icons/icon-load-more.svg');
                         background-repeat: no-repeat;
                         background-size: contain;
-                        position: absolute;
-                        top: 50%;
-                        left: rem(12px);
-                        transform: translateY(-50%);
+
+                        display: inline-flex;
+                        align-self: center;
+                        margin-right: rem(10px);
+                        margin-left: rem(-30px);
+
+                        @include media(md) {
+                            margin-right: 0;
+                            margin-left: 0;
+                            position: absolute;
+                            top: 50%;
+                            left: rem(12px);
+                            transform: translateY(-50%);
+                        }
 
                     }
 
