--- a/web/themes/digitac/scss/05_theme/page/_node--type-curso.scss
+++ b/web/themes/digitac/scss/05_theme/page/_node--type-curso.scss
@@ -102,10 +102,10 @@
             display: flex;
             flex-direction: column;
 
-            @include media(lg) {
+            /* @include media(lg) {
                 flex-direction: row;
                 align-items: center;
-            }
+            } */
 
             .rating-option-result {
                 display: none;
