--- a/web/themes/digitac/templates/nodes/node--tramite.html.twig
+++ b/web/themes/digitac/templates/nodes/node--tramite.html.twig
@@ -138,11 +138,11 @@
 
             <div class="ratings">
                   <div class="ratings__content">
+                        <span>{{ 'Valora este trámite'|t }}</span>
                         {% if logged_in %}
-                              <span>{{ 'Valora este trámite'|t }}</span>
                               {{ content.rate_stars }}
                         {% else %}
-                              <span class="ratings__login">{{'Para hacer una valoración'|t}}&nbsp;<a href="/user/login">necesitas estar logado</a></span>
+                              <span class="ratings__login">{{'Para hacer una valoración debes'|t}}&nbsp;<a href="/user/login">{{'iniciar sesión'|t}}</a>&nbsp;o&nbsp;<a href="/user/register">{{'regístrarte'|t}}</a></span>
                         {% endif %}
                   </div>
             </div>
