--- a/web/themes/digitac/templates/views/views-view--distributivas.html.twig
+++ b/web/themes/digitac/templates/views/views-view--distributivas.html.twig
@@ -108,7 +108,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva idea'|t}}</h3>
           <p>{{'Para crear una nueva idea necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -127,7 +127,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-header__content">
-          <h3 class="modal-title" id="exampleModalLabel">{{'Login'|t}}</h3>
+          <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva experiencia'|t}}</h3>
           <p>{{'Para crear una nueva experiencia necesitas estar logado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
