--- a/web/themes/digitac/templates/views/views-view-fields--cursos--block_2.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--cursos--block_2.html.twig
@@ -11,9 +11,11 @@
             <div class="category">
                 <span class="type">{{ fields.field_curso_categoria.content }}</span>
             </div>
-            <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link">
-                <div class="title">{{ fields.title.content }}</div>
-            </a>
+            <div class="title">
+                <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link">
+                    {{ fields.title.content }}
+                </a>
+            </div>
             <div class="content">{{ fields.body.content }}</div>
 
            <div class="tags">
