--- a/web/themes/digitac/templates/views/views-view-fields--cursos--block_3.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--cursos--block_3.html.twig
@@ -12,11 +12,13 @@
             <div class="category">
                 <span class="type">{{ fields.field_curso_categoria.content }}</span>
             </div>
+            <div class="title">
             <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link">
-                <div class="title">{{ fields.title.content }}</div>
+                {{ fields.title.content }}
             </a>
+            </div>
             <div class="content">{{ fields.body.content }}</div>
-           <div class="tags">
+            <div class="tags">
                 {% if fields.field_curso_target.content|render|striptags|trim %}
                     {% set tags = fields.field_curso_target.content|render|striptags|trim|split('|') %}
                     {% for key,item in tags %}
