--- a/web/themes/digitac/templates/views/views-view-fields--soluciones--block_3.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--soluciones--block_3.html.twig
@@ -12,9 +12,11 @@
             <div class="category">
                 <span class="type">{{ fields.type.content }}</span>
             </div>
-            <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link">
-                <div class="title">{{ fields.title.content }}</div>
-            </a>
+            <div class="title">
+                <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link">
+                    {{ fields.title.content }}
+                </a>
+            </div>
 
             {% if(fields.type.content|render|striptags|trim == 'Solución') %}
             <div class="content">{{ fields.body.content }}</div>
