--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -174,12 +174,12 @@
       <div class="modal-header">
         <div class="modal-header__content">
           <h3 class="modal-title" id="loginModalStructure">{{'Crear un comentario'|t}}</h3>
-          <p>{{'Para hacer un comentario necesitas estar logado'|t}}</p>
+          <p>{{'Para hacer un comentario necesitas estar registrado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <a href="/user/login" type="button" class="btn btn-secondary">{{'Entrar en mi cuenta'|t}}</a>
+        <a href="/user/login" type="button" class="btn btn-secondary">{{'Iniciar sesión'|t}}</a>
         <a href="/user/login" type="button" class="btn btn-primary">{{'Registrarme'|t}}</a>
       </div>
     </div>
@@ -197,7 +197,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary">Entrar en mi cuenta</button>
+        <button type="button" class="btn btn-secondary">Iniciar sesión</button>
         <button type="button" class="btn btn-primary">Registrarme</button>
       </div>
     </div>
@@ -215,7 +215,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary">Entrar en mi cuenta</button>
+        <button type="button" class="btn btn-secondary">Iniciar sesión</button>
         <button type="button" class="btn btn-primary">Registrarme</button>
       </div>
     </div>
