--- a/web/themes/digitac/templates/nodes/node--reto.html.twig
+++ b/web/themes/digitac/templates/nodes/node--reto.html.twig
@@ -223,12 +223,12 @@
       <div class="modal-header">
         <div class="modal-header__content">
           <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva idea'|t}}</h3>
-          <p>{{'Para crear una nueva idea necesitas estar logado'|t}}</p>
+          <p>{{'Para crear una nueva idea necesitas estar registrado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <a href="/user/login" type="button" class="btn btn-secondary">{{'Entrar en mi cuenta'|t}}</a>
+        <a href="/user/login" type="button" class="btn btn-secondary">{{'Iniciar sesión'|t}}</a>
         <a href="/user/register" type="button" class="btn btn-primary">{{'Registrarme'|t}}</a>
       </div>
     </div>
@@ -241,12 +241,12 @@
       <div class="modal-header">
         <div class="modal-header__content">
           <h3 class="modal-title" id="exampleModalLabel">{{'Crear nueva experiencia'|t}}</h3>
-          <p>{{'Para crear una nueva experiencia necesitas estar logado'|t}}</p>
+          <p>{{'Para crear una nueva experiencia necesitas estar registrado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <a href="/user/login" type="button" class="btn btn-secondary">{{'Entrar en mi cuenta'|t}}</a>
+        <a href="/user/login" type="button" class="btn btn-secondary">{{'Iniciar sesión'|t}}</a>
         <a href="/user/register" type="button" class="btn btn-primary">{{'Registrarme'|t}}</a>
       </div>
     </div>
