--- a/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
@@ -97,12 +97,12 @@
       <div class="modal-header">
         <div class="modal-header__content">
           <h3 class="modal-title" id="exampleModalLabel">{{'Crear nuevo reto'|t}}</h3>
-          <p>{{'Para crear un nuevo reto necesitas estar logado'|t}}</p>
+          <p>{{'Para crear un nuevo reto necesitas estar registrado'|t}}</p>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <a href="/user/login" type="button" class="btn btn-secondary">{{'Entrar en mi cuenta'|t}}</a>
+        <a href="/user/login" type="button" class="btn btn-secondary">{{'Iniciar sesión'|t}}</a>
         <a href="/user/register" type="button" class="btn btn-primary">{{'Registrarme'|t}}</a>
       </div>
     </div>
