--- a/web/themes/digitac/css/digitac-hub.css
+++ b/web/themes/digitac/css/digitac-hub.css
@@ -250,6 +250,57 @@ main {
     align-items: inherit;
   }
 }
+.header .user-ball {
+  width: 100%;
+  max-width: 2rem;
+  min-width: 2rem;
+  height: 2rem;
+  padding: 0.375rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F2F4F7;
+  border-color: 0.0625rem solid rgba(16, 24, 40, 0.75);
+  border-radius: 50%;
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-align: center;
+  color: #475467;
+  position: absolute;
+  top: 1.125rem;
+  right: 3.75rem;
+}
+@media (min-width: 768px) {
+  .header .user-ball {
+    right: 5.875rem;
+  }
+}
+@media (min-width: 1280px) {
+  .header .user-ball {
+    max-width: 2.5rem;
+    min-width: 2rem;
+    height: 2.5rem;
+    margin-left: 1.5rem;
+    position: relative;
+    top: 0;
+    right: 0;
+    display: none;
+  }
+}
+.header .user-ball .star_expertoTac {
+  position: absolute;
+  bottom: -0.3125rem;
+  right: -0.25rem;
+}
+@media (min-width: 1280px) {
+  .header .user-ball .star_expertoTac {
+    bottom: -0.25rem;
+    right: 0;
+  }
+}
 .header__content {
   width: 100%;
   height: 100%;
@@ -273,6 +324,17 @@ main {
     position: relative;
     right: 0;
     overflow-y: inherit;
+  }
+}
+@media (min-width: 768px) {
+  .header__content .user-ball {
+    right: 4.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .header__content .user-ball {
+    display: inline-flex;
+    right: 0;
   }
 }
 .header__content-header {
@@ -580,51 +642,6 @@ main {
 }
 .header .selectBox {
   padding: 0;
-}
-.header .user-ball {
-  width: 100%;
-  max-width: 2rem;
-  min-width: 2rem;
-  height: 2rem;
-  padding: 0.375rem;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #F2F4F7;
-  border-color: 0.0625rem solid rgba(16, 24, 40, 0.75);
-  border-radius: 50%;
-  font-family: "Open Sans", arial, sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  text-align: center;
-  color: #475467;
-  position: absolute;
-  top: 1.125rem;
-  right: 3.75rem;
-}
-@media (min-width: 1280px) {
-  .header .user-ball {
-    max-width: 2.5rem;
-    min-width: 2rem;
-    height: 2.5rem;
-    margin-left: 1.5rem;
-    position: relative;
-    top: 0;
-    right: 0;
-  }
-}
-.header .user-ball .star_expertoTac {
-  position: absolute;
-  bottom: -0.3125rem;
-  right: -0.25rem;
-}
-@media (min-width: 1280px) {
-  .header .user-ball .star_expertoTac {
-    bottom: -0.25rem;
-    right: 0;
-  }
 }
 .header.fixed {
   max-width: 1438px;
@@ -3138,6 +3155,7 @@ body:not(.path-frontpage) .header.fixed {
   top: 1rem;
   right: 1rem;
   z-index: 2;
+  cursor: pointer;
 }
 .message__content {
   padding-left: 1.75rem;
@@ -6030,8 +6048,9 @@ body:not(.path-frontpage) .header.fixed {
   border-radius: 0.75rem;
 }
 .text-formatted blockquote {
+  margin: 2.5rem 0;
   padding-left: 1.25rem;
-  border: 0.0625rem solid #101828;
+  border-left: 0.0625rem solid #101828;
 }
 .text-formatted blockquote p {
   font-family: "Open Sans", arial, sans-serif;
@@ -6679,6 +6698,13 @@ body:not(.path-frontpage) .header.fixed {
   border-color: #115B75;
   background-color: #115B75;
   color: #ffffff;
+}
+.view-id-view_retos.view-display-id-block_2:not(:first-child) {
+  display: none;
+}
+
+.paragraph--title--Administrar_retos:not(:first-child) {
+  display: none;
 }
 
 .view-id-content,
