--- a/web/themes/digitac/scss/02_layout/_header.scss
+++ b/web/themes/digitac/scss/02_layout/_header.scss
@@ -26,6 +26,57 @@
     }
   }
 
+  // user ball letters
+  .user-ball {
+    width: 100%;
+    max-width: rem(32px);
+    min-width: rem(32px);
+    height: rem(32px);
+    padding: rem(6px);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $grey-100;
+    border-color: rem(1px) solid rgba($grey-900, 0.75);
+    border-radius: 50%;
+    font-family: $font-family-base;
+    font-style: normal;
+    font-weight: 600;
+    font-size: rem(16px);
+    line-height: rem(24px);
+    text-align: center;
+    color: $grey-600;
+    position: absolute;
+    top: rem(18px);
+    right: rem(60px);
+
+    @include media(md) {
+      right: rem(94px);
+    }
+
+    @include media(xxl) {
+      max-width: rem(40px);
+      min-width: rem(32px);
+      height: rem(40px);
+      margin-left: rem(24px);
+      position: relative;
+      top: 0;
+      right: 0;
+      display: none;
+    }
+
+    .star_expertoTac {
+      position: absolute;
+      bottom: rem(-5px);
+      right: rem(-4px);
+
+      @include media(xxl) {
+        bottom: rem(-4px);
+        right: 0;
+      }
+    }
+  }
+
   &__content {
     width: 100%;
     height: 100%;
@@ -48,6 +99,18 @@
       position: relative;
       right: 0;
       overflow-y: inherit;
+    }
+
+    // user ball letters
+    .user-ball {
+      @include media(md) {
+        right: rem(70px);
+      }
+
+      @include media(xxl) {
+        display: inline-flex;
+        right: 0;
+      }
     }
 
 
@@ -410,53 +473,6 @@
     padding: 0;
   }
 
-
-  // user ball letters
-  .user-ball {
-    width: 100%;
-    max-width: rem(32px);
-    min-width: rem(32px);
-    height: rem(32px);
-    padding: rem(6px);
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $grey-100;
-    border-color: rem(1px) solid rgba($grey-900, 0.75);
-    border-radius: 50%;
-    font-family: $font-family-base;
-    font-style: normal;
-    font-weight: 600;
-    font-size: rem(16px);
-    line-height: rem(24px);
-    text-align: center;
-    color: $grey-600;
-    position: absolute;
-    top: rem(18px);
-    right: rem(60px);
-
-    @include media(xxl) {
-      max-width: rem(40px);
-      min-width: rem(32px);
-      height: rem(40px);
-      margin-left: rem(24px);
-      position: relative;
-      top: 0;
-      right: 0;
-    }
-
-    .star_expertoTac {
-      position: absolute;
-      bottom: rem(-5px);
-      right: rem(-4px);
-
-      @include media(xxl) {
-        bottom: rem(-4px);
-        right: 0;
-      }
-    }
-  }
-
   // states
   &.fixed {
     max-width: calc(1440px - 2px);
@@ -570,8 +586,6 @@
         }
       }
     }
-
-
 
   }
 
