--- a/web/themes/digitac/templates/includes/region--header.html.twig
+++ b/web/themes/digitac/templates/includes/region--header.html.twig
@@ -16,6 +16,19 @@
 					<img src="/themes/digitac/images/digitac-logo.svg" alt="Logo digitac" class="logo logo-fixed"/>
 				</a>
 			</div>
+			{% if user.id != 0 %}
+
+				<div class="user-ball">
+					{% set siglas = user.displayname|striptags|split(' ') %}
+					{% for item in siglas%}{{ item|first|upper|trim }}{% endfor %}
+
+					{% if 'experto' in user.getroles()  %}
+						<div class="star_expertoTac"><img src="/themes/digitac/images/icons/icon-verified.svg" alt="" /></div>
+					{% endif %}
+				</div>
+
+			{% endif %}
+
 			<button class="navbar-toggler js-open-menu" type="button" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Botón de menú">
 				<span class="visually-hidden">Abrir menú de navegación</span>
@@ -40,21 +53,21 @@
 
 				<div class="header__menu-registro">
 
-{% if logged_in %}
-<div class="selectBox">
-  <div class="selectBox__value">
-    <a href="#">{{'Mi cuenta'|t}}</a>
-  </div>
+					{% if logged_in %}
+					<div class="selectBox">
+					<div class="selectBox__value">
+						<a href="#">{{'Mi cuenta'|t}}</a>
+					</div>
 
-  <div class="dropdown-menu">
-{% endif %}
+					<div class="dropdown-menu">
+					{% endif %}
 
-					{{ drupal_block("system_menu_block:account", {depth: 2, expand_all_items: TRUE}) }}
+										{{ drupal_block("system_menu_block:account", {depth: 2, expand_all_items: TRUE}) }}
 
-{% if logged_in %}
-  </div>
-</div>
-{% endif %}
+					{% if logged_in %}
+					</div>
+					</div>
+					{% endif %}
 
 
 
