--- a/web/themes/digitac/templates/Field/field--comment.html.twig
+++ b/web/themes/digitac/templates/Field/field--comment.html.twig
@@ -49,7 +49,7 @@
 
   {{ comments }}
 
-  {% if comment_form %}
+  {% if comment_form and not reto_cerrado and not idea_cerrada%}
     <div class="box-grey">
       <h2 class="title comment-form__title">{{ 'Add new comment'|t }}</h2>
       {{ comment_form }}
