--- a/web/themes/digitac/templates/nodes/node--experiencia.html.twig
+++ b/web/themes/digitac/templates/nodes/node--experiencia.html.twig
@@ -147,6 +147,7 @@
       </div> {# /.idea #}
     </div>
 
+    {% if tiene_votacion==1 and not reto_cerrado and not idea_cerrada %}
     <div class="ratings">
       <div class="ratings__content">
       <span>{{'Valora esta experiencia'|t}}</span>  
@@ -157,6 +158,8 @@
         {% endif %}
       </div>
     </div>
+    {% endif %}
+
 
 
     <div class="container">
