--- a/web/themes/digitac/templates/views/views-view--distributivas.html.twig
+++ b/web/themes/digitac/templates/views/views-view--distributivas.html.twig
@@ -59,9 +59,14 @@
         <div class="block-empty">
           <span class="block-empty__title">{{ 'Oooooops'|t }}</span>
           <span class="block-empty__subtitle">{{ 'Parece que no hay ideas por aquí'|t }}</span>
-          <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
+          {%if not reto_cerrado%}
+            <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
+          {% endif %}
+
             {% if logged_in %}
-              <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-idea/{{view.args[0]}}'>{{ 'Nueva idea'|t }}</a>
+              {%if not reto_cerrado%}
+                <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-idea/{{view.args[0]}}'>{{ 'Nueva idea'|t }}</a>
+              {% endif %}
             {% else %}
               <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-primary btn-primary--icon">{{'Nueva idea'|t}}</a>
             {% endif %}
@@ -71,10 +76,14 @@
         <div class="block-empty">
           <span class="block-empty__title">{{ 'Oooooops'|t }}</span>
           <span class="block-empty__subtitle">{{ 'Parece que no hay experiencias por aquí'|t }}</span>
-          <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
+          {%if not reto_cerrado%}
+            <span class="block-empty__text">{{ '¿Por que no propones tu la primera?'|t }}</span>
+          {% endif %}
 
             {% if logged_in %}
-              <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-experiencia/{{view.args[0]}}'>{{ 'Nueva experiencia'|t }}</a>
+              {%if not reto_cerrado%}
+                <a class="btn btn--primary btn-primary--icon btn-primary--icon-check" href='/nueva-experiencia/{{view.args[0]}}'>{{ 'Nueva experiencia'|t }}</a>
+              {% endif %}
             {% else %}
               <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal2" class="btn btn-primary btn-primary--icon">{{'Nueva experiencia'|t}}</a>
             {% endif %}
